<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/profile" />

        <item android:title="@string/about_us">
            <menu>
                <item
                    android:id="@+id/nav_contact"
                    android:icon="@drawable/ic_contact"
                    android:title="@string/contact" />
                <item
                    android:id="@+id/nav_logut"
                    android:icon="@drawable/ic_exit"
                    android:title="@string/log_out" />
            </menu>
        </item>

    </group>



</menu>