<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="world.emir.sparkairlines.UpdateNotesFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/note_name_ed_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/note_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/note_body_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/note_name_ed_update"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/add_note"
        android:inputType="text" />

    <Button
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/close"
        android:background="@drawable/buttonstyle"
        android:layout_marginEnd="83dp"
        android:layout_below="@+id/note_body_update"
        android:layout_alignParentEnd="true"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/note_bnt_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textColor="@color/white"
        android:background="@drawable/buttonstyle"
        android:layout_marginEnd="46dp"
        android:layout_alignBaseline="@+id/close"
        android:layout_alignBottom="@+id/close"
        android:layout_toStartOf="@+id/close" />
</RelativeLayout>
