<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/create_flights"
    tools:context="world.emir.sparkairlines.CreateFlights">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/paperplane"
        android:id="@+id/imageView2"

        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp" />

    <EditText
        android:id="@+id/name_of_second_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/second_destination"
        android:inputType="textPersonName"
        android:layout_above="@+id/ed_price"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp" />


    <EditText
        android:id="@+id/name_of_first_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/second_destination"
        android:inputType="textPersonName"
        android:layout_above="@+id/name_of_second_destination"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/ed_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submit_btn"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="27dp"
        android:ems="10"
        android:hint="@string/date_hint"
        android:inputType="date" />


    <EditText
        android:id="@+id/ed_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/time"
        android:inputType="time"
        android:layout_above="@+id/ed_date"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="13dp" />


    <EditText
        android:id="@+id/ed_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"

        android:hint="@string/price"
        android:inputType="number"
        android:layout_above="@+id/ed_time"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonstyle"
        android:text="@string/submit"
        android:textColor="@color/color2"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
    </RelativeLayout>
